src/scss/mark.scss
@import "./utils.scss";

$mark-spacing: 1.2rem;
$mark-line-height: 1.4em;

@mixin codehilite {
  .codehilite .hll { background-color: #ffffcc }
  .codehilite .c { color: #6a737d } /* Comment */
  .codehilite .err {  } /* Error */
  .codehilite .k { color: #d73a49 } /* Keyword */
  .codehilite .o { } /* Operator */
  .codehilite .ch { color: #6a737d } /* Comment.Hashbang */
  .codehilite .cm { color: #6a737d } /* Comment.Multiline */
  .codehilite .cp { color: #d73a49 } /* Comment.Preproc */
  .codehilite .cpf { color: #032f62 } /* Comment.PreprocFile */
  .codehilite .c1 { color: #6a737d } /* Comment.Single */
  .codehilite .cs { color: #6a737d } /* Comment.Special */
  .codehilite .gd { color: #b31d28; background-color: #ffeef0 } /* Generic.Deleted */
  .codehilite .ge {  } /* Generic.Emph */
  .codehilite .gr {  } /* Generic.Error */
  .codehilite .gh { color: #005cc5 } /* Generic.Heading */
  .codehilite .gi { color: #22863a; background-color: #f0fff4 } /* Generic.Inserted */
  .codehilite .go {  } /* Generic.Output */
  .codehilite .gp {  } /* Generic.Prompt */
  .codehilite .gs { font-weight: bold } /* Generic.Strong */
  .codehilite .gu { color: #6f42c1; font-weight: bold } /* Generic.Subheading */
  .codehilite .gt { color: #0044DD } /* Generic.Traceback */
  .codehilite .kc { color: #005cc5 } /* Keyword.Constant */
  .codehilite .kd { color: #d73a49 } /* Keyword.Declaration */
  .codehilite .kn { color: #d73a49 } /* Keyword.Namespace */
  .codehilite .kp { color: #d73a49 } /* Keyword.Pseudo */
  .codehilite .kr { color: #d73a49 } /* Keyword.Reserved */
  .codehilite .kt { color: #d73a49 } /* Keyword.Type */
  .codehilite .m { color: #666666 } /* Literal.Number */
  .codehilite .s { color: #032f62 } /* Literal.String */
  .codehilite .na { } /* Name.Attribute */
  .codehilite .nb { color: #005cc5 } /* Name.Builtin */
  .codehilite .nc { color: #6f42c1 } /* Name.Class */
  .codehilite .no { color: #005cc5 } /* Name.Constant */
  .codehilite .nd { color: #6f42c1 } /* Name.Decorator */
  .codehilite .ni { color: #005cc5 } /* Name.Entity */
  .codehilite .ne { color: #005cc5 } /* Name.Exception */
  .codehilite .nf { color: #6f42c1 } /* Name.Function */
  .codehilite .nl { color: #005cc5 } /* Name.Label */
  .codehilite .nn { color: #6f42c1 } /* Name.Namespace */
  .codehilite .nt { color: #22863a } /* Name.Tag */
  .codehilite .nv { color: #24292e } /* Name.Variable */
  .codehilite .ow { color: #d73a49; } /* Operator.Word */
  .codehilite .w { color: #bbbbbb } /* Text.Whitespace */
  .codehilite .mb { color: #005cc5 } /* Literal.Number.Bin */
  .codehilite .mf { color: #005cc5 } /* Literal.Number.Float */
  .codehilite .mh { color: #005cc5 } /* Literal.Number.Hex */
  .codehilite .mi { color: #005cc5 } /* Literal.Number.Integer */
  .codehilite .mo { color: #005cc5 } /* Literal.Number.Oct */
  .codehilite .sa { color: #d73a49 } /* Literal.String.Affix */
  .codehilite .sb { color: #032f62 } /* Literal.String.Backtick */
  .codehilite .sc { color: #032f62 } /* Literal.String.Char */
  .codehilite .dl { color: #d73a49 } /* Literal.String.Delimiter */
  .codehilite .sd { color: #032f62 } /* Literal.String.Doc */
  .codehilite .s2 { color: #032f62 } /* Literal.String.Double */
  .codehilite .se { color: #032f62 } /* Literal.String.Escape */
  .codehilite .sh { color: #032f62 } /* Literal.String.Heredoc */
  .codehilite .si { color: #005cc5 } /* Literal.String.Interpol */
  .codehilite .sx { color: #032f62 } /* Literal.String.Other */
  .codehilite .sr { color: #032f62 } /* Literal.String.Regex */
  .codehilite .s1 { color: #032f62 } /* Literal.String.Single */
  .codehilite .ss { color: #005cc5 } /* Literal.String.Symbol */
  .codehilite .bp { color: #005cc5 } /* Name.Builtin.Pseudo */
  .codehilite .fm { color: #005cc5 } /* Name.Function.Magic */
  .codehilite .vc { color: #24292e } /* Name.Variable.Class */
  .codehilite .vg { color: #24292e } /* Name.Variable.Global */
  .codehilite .vi { color: #24292e } /* Name.Variable.Instance */
  .codehilite .vm { color: #005cc5 } /* Name.Variable.Magic */
  .codehilite .il { color: #005cc5 } /* Literal.Number.Integer.Long */
  // line number
  table.codehilitetable {
    border: none;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.03);
    font-size: 85%;
    code { font-size: inherit; }
    &, > tbody, > tbody > tr { display: block; }
    tbody > tr {
      background-color: transparent;
      pre { background: transparent; padding: 0; margin: 0; }
      > td.linenos {
        @include no-select;
        padding: .8rem 1rem;
        color: rgba(0, 0, 0, $active-opacity);
      }
      > td.code { padding: .8rem 1rem .8rem 0;}
    }
  }
}


@mixin mark-font {
  color: rgba(black, $active-opacity);
  h1, h2, h3, h4, h5, h6, li, ul, p {
    color: inherit;
    line-height: $mark-line-height;
    font-weight: normal;
  }
  p { white-space: pre-wrap; }

  p { font-size: 1em; }
  h1 { font-size: 2.5em;}
  h2 { font-size: 2.3em;}
  h3 { font-size: 1.9em;}
  h4 { font-size: 1.5em;}
  h5 { font-size: 1.3em;}
  h6 { font-size: 1em;}
}


@mixin mark-margin-tb {

  h1, h2, h3, h4, h5, h6 {
    margin-top: calc(3 * #{$mark-spacing} - #{($mark-line-height - 1em)/2});
    margin-bottom: calc(#{$mark-spacing} - #{($mark-line-height - 1em)/2});
    + h1, + h2, + h3, + h4, + h5, + h6 { margin-top: 0; }
    &:first-child { margin-top: calc(2 * #{$mark-spacing} - #{($mark-line-height - 1em)/2}); }
  }
  p {
    margin-top: calc(#{$mark-spacing} - #{($mark-line-height - 1em)/2});
    margin-bottom: calc(#{$mark-spacing} - #{($mark-line-height - 1em)/2});
  }

  table, hr {
    margin-top: $mark-spacing;
    margin-bottom: $mark-spacing;
  }
}

@mixin mark-margin-lr {
  @include portrait {
    // FIXME remove div support if not needed
    > h1, > h2, > h3, > h4, > h5, > h6, > p, > ul, > ol, > div {
      margin-left: 1rem;
      margin-right: 1rem;
    }
    // Full width if portrait
    > table, > div.codehilite, > div.full-width--portrait, > blockquote, > hr {
      margin-left: 0; margin-right: 0;
    }
  }
}

// Inline code and code block
@mixin mark-code {
  code, pre, tt, pre * {
    font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace; 
  }
  code, tt {
    padding: .2em .4em;
    margin: 0;
    font-size: 85%;
    background-color: rgba(0, 0, 0, .03);
    border-radius: .3em;
  }

  pre {
    background-color: rgba(0, 0, 0, .03);
    padding: 0.8rem 1rem;
    overflow: auto;
    > code, > tt { padding: 0; background-color: transparent; }
  }
}

@mixin mark-table {
  $border-color: #dcdcdc;
  table {
    padding: 0;

    border-collapse:collapse;
    & { border: 1px solid $border-color; }
    & thead tr { border-bottom: 1px solid $border-color; }

    table-layout: fixed;
    max-width: 100%;
    @include portrait {
      &, & thead tr { border-left: none; border-right: none; }
      overflow: auto;
      width: 100%;
    }

    tr {
      margin: 0;
      padding: 0;
      background-color: white;
      &:nth-child(even) { background-color: rgba(0, 0, 0, .02); }
    }
    tr th { font-weight: bold; }
    tr th, tr td {
      text-align: left;
      padding: .6em 1em;
      margin: 0;
      &:first-child { margin-top: 0; }
      &:last-child { margin-bottom: 0; }
    }
  }
}

/**
 * Supported Tags:
 * h1, h2, h3, h4, h5, h6, p
 * ul, ol, li
 * table
 * table.codehilite(pre), code
 * blockquote
 */
@mixin mark {

  @include codehilite;
  @include mark-font;
  @include mark-margin-tb;
  @include mark-margin-lr;

  @include mark-code;
  @include mark-table;

  hr { border-color: rgba(0, 0, 0, $divider-opacity); border-bottom: none; }

  ul, ol { padding-left: 2em; }

  blockquote {
    padding: 0 1em;
    color: #6a737d;
    border-left: .25em solid #dfe2e5;
  }

  // Support customized link
  a {
    cursor: pointer;
    color: rgba(0, 112, 201, $active-opacity);
    &:hover { color: rgba(0, 112, 201, $inactive-opacity); }
  }

}

